deal-section -added

--- a/index.html
+++ b/index.html
@@ -237,7 +237,136 @@
 
     <!-- main section -->
     <main>
-
+        <!-- Deal Of the Day Section -->
+        <section class="container mx-auto mb-8">
+            <div class="flex flex-col md:flex-row justify-center items-center mt-12 md:mt-40 mx-8 lg:mx-0">
+                <!-- first-child -->
+                <div class="flex-1 space-y-5 md:space-y-3 text-center md:text-left">
+                    <h3 class="text-4xl md:text-5xl text-gray-800 font-bold">Deal of the day</h3>
+                    <p class="text-sm text-gray-400 font-semibold max-w-xs md:max-w-full">
+                        Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+                        Latin literature from 45 BC, making it over 2000 years old.
+                    </p>
+                </div>
+                <!-- second child -->
+                <div class="flex-1 flex justify-center md:justify-end">
+                    <div class="grid grid-flow-col gap-0 md:gap-5 text-center auto-cols-max">
+                        <div class="flex flex-col p-2 bg-white rounded-box text-sm text-gray-500 font-semibold">
+                            <span class="countdown font-mono text-5xl text-gray-800 font-bold flex items-center">
+                                <span style="--value:15;"></span>
+                                <i class="fa-solid fa-ellipsis-vertical text-gray-600 text-sm ml-4"></i>
+                            </span>
+                            days
+                        </div>
+                        <div class="flex flex-col p-2 bg-white rounded-box text-gray-500 font-semibold">
+                            <span class="countdown font-mono text-5xl text-gray-800 font-bold flex items-center">
+                                <span style="--value:10;"></span>
+                                <i class="fa-solid fa-ellipsis-vertical text-gray-600 text-sm ml-4"></i>
+                            </span>
+                            hours
+                        </div>
+                        <div class="flex flex-col p-2 bg-white rounded-box text-gray-500 font-semibold">
+                            <span class="countdown font-mono text-5xl text-gray-800 font-bold flex items-center">
+                                <span style="--value:24;"></span>
+                                <i class="fa-solid fa-ellipsis-vertical text-gray-600 text-sm ml-4"></i>
+                            </span>
+                            min
+                        </div>
+                        <div class="flex flex-col p-2 bg-white rounded-box text-gray-500 font-semibold">
+                            <span class="countdown font-mono text-5xl text-gray-800 font-bold">
+                                <span style="--value:48;"></span>
+                            </span>
+                            sec
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Deal Bottom section -->
+        <section class="container mx-auto my-20">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mx-5 lg:mx-0">
+                <!-- first col -->
+                <div class="card bg-neutral-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit6.png" alt="Fruits" class="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-gray-900 text-2xl font-bold">12.90$ - 18.85$</h2>
+                        <p class="text-sm text-gray-400 font-semibold">Apples</p>
+                        <div class="flex items-center justify-center text-xl">
+                            <span><i class="fa-solid fa-star text-orange-400 "></i></span>
+                            <span><i class="fa-regular fa-star-half-stroke text-orange-400"></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                        </div>
+                        <button>
+                            <a href="#" class="text-[#F85559] text-sm font-semibold">Details</a>
+                        </button>
+                    </div>
+                </div>
+                <!-- second col -->
+                <div class="card bg-neutral-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit7.png" alt="Fruits" class="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-gray-900 text-2xl font-bold">12.90$ - 18.85$</h2>
+                        <p class="text-sm text-gray-400 font-semibold">Apples</p>
+                        <div class="flex items-center justify-center text-xl">
+                            <span><i class="fa-solid fa-star text-orange-400 "></i></span>
+                            <span><i class="fa-regular fa-star-half-stroke text-orange-400"></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                        </div>
+                        <button>
+                            <a href="#" class="text-[#F85559] text-sm font-semibold">Details</a>
+                        </button>
+                    </div>
+                </div>
+                <!-- third col -->
+                <div class="card bg-neutral-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit8.png" alt="Fruits" class="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-gray-900 text-2xl font-bold">12.90$ - 18.85$</h2>
+                        <p class="text-sm text-gray-400 font-semibold">Apples</p>
+                        <div class="flex items-center justify-center text-xl">
+                            <span><i class="fa-solid fa-star text-orange-400 "></i></span>
+                            <span><i class="fa-regular fa-star-half-stroke text-orange-400"></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                        </div>
+                        <button>
+                            <a href="#" class="text-[#F85559] text-sm font-semibold">Details</a>
+                        </button>
+                    </div>
+                </div>
+                <!-- fourth col -->
+                <div class="card bg-neutral-100 shadow-xl rounded-lg">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit9.png" alt="Fruits" class="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-gray-900 text-2xl font-bold">12.90$ - 18.85$</h2>
+                        <p class="text-sm text-gray-400 font-semibold">Apples</p>
+                        <div class="flex items-center justify-center text-xl">
+                            <span><i class="fa-solid fa-star text-orange-400 "></i></span>
+                            <span><i class="fa-regular fa-star-half-stroke text-orange-400"></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                            <span><i class="fa-solid fa-star text-orange-200 "></i></span>
+                        </div>
+                        <button>
+                            <a href="#" class="text-[#F85559] text-sm font-semibold">Details</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer section -->
