--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Deal Bottom section -->
         <section class="container mx-auto md:my-20">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mx-5 lg:mx-0">
@@ -518,9 +519,11 @@
                 <button class="btn hover:bg-primary-color bg-primary-color text-white border-none ">Shop All</button>
             </div>
         </section>
+
         <!-- hero section -->
         <section class="container mx-auto my-20 px-5 lg:px-0">
-            <div class="hero relative w-full overflow-hidden rounded-xl" style="background-image: url('./images/team.png'); ">
+            <div class="hero relative w-full overflow-hidden rounded-xl"
+                style="background-image: url('./images/team.png'); ">
                 <div class="image-overlay overflow-hidden"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="max-w-screen-lg">
@@ -633,7 +636,128 @@
                 </div>
             </div>
         </section>
-        
+
+        <!-- Choose section -->
+        <section class="container mx-auto my-24 px-5 lg:px-0">
+            <div class="text-center max-w-screen-md mx-auto space-y-4">
+                <h3 class="text-black font-extrabold text-3xl md:text-5xl">Why Choose Us</h3>
+                <p class="leading-6 text-gray-400 text-sm font-semibold max-w-sm md:max-w-xl mx-auto">
+                    Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
+                    literature from 45 BC, making it over 2000 years old.
+                </p>
+            </div>
+            <!-- container -->
+            <div class="flex flex-col lg:flex-row items-center gap-5 mt-12">
+                <!-- first-child -->
+                <div class="flex-1 space-y-6 order-2 lg:order-1">
+                    <!-- ====== -->
+                    <div class="flex flex-col lg:flex-row justify-center">
+                        <div class="mr-0 lg:mr-3 flex justify-center lg:justify-start">
+                            <span
+                                class="w-10 h-10 rounded-full bg-neutral-300 text-gray-600 text-lg flex items-center justify-center mt-2">
+                                <i class="fa-regular fa-address-book"></i>
+                            </span>
+                        </div>
+                        <div class="space-y-2 text-center lg:text-left">
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Dedicated Team</h3>
+                            <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
+                            <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
+                                Professional employees are there for you to pick the most amazing and fresh fruits.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- ====== -->
+                    <div class="flex flex-col lg:flex-row justify-center">
+                        <div class="mr-0 lg:mr-3 flex justify-center lg:justify-start">
+                            <span
+                                class="w-10 h-10 rounded-full bg-neutral-300 text-gray-600 text-lg flex items-center justify-center mt-2">
+                                <i class="fa-regular fa-address-book"></i>
+                            </span>
+                        </div>
+                        <div class="space-y-2 text-center lg:text-left">
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Fresh is Best</h3>
+                            <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
+                            <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
+                                Professional employees are there for you to pick the most amazing and fresh fruits.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- ====== -->
+                    <div class="flex flex-col lg:flex-row justify-center">
+                        <div class="mr-0 lg:mr-3 flex justify-center lg:justify-start">
+                            <span
+                                class="w-10 h-10 rounded-full bg-neutral-300 text-gray-600 text-lg flex items-center justify-center mt-2">
+                                <i class="fa-regular fa-address-book"></i>
+                            </span>
+                        </div>
+                        <div class="space-y-2 text-center lg:text-left">
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Gift Certificates</h3>
+                            <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
+                            <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
+                                Professional employees are there for you to pick the most amazing and fresh fruits.
+                            </p>
+                        </div>
+                    </div>
+                    
+                </div>
+                <!-- second-child -->
+                <div class="flex-1 order-1 lg:order-2 ">
+                    <img src="./images/whychoose1.png" class="w-full">
+                </div>
+                <!-- third-child -->
+                <div class="flex-1 space-y-5 order-3">
+                    <!-- ===== -->
+                    <div class="flex flex-col justify-center lg:flex-row-reverse ">
+                        <div class="ml-0 lg:ml-3 flex justify-center lg:justify-end">
+                            <span
+                                class="w-10 h-10 rounded-full bg-neutral-300 text-gray-600 text-lg flex items-center justify-center mt-2">
+                                <i class="fa-regular fa-address-book"></i>
+                            </span>
+                        </div>
+                        <div class="my-2 lg:my-0 text-center lg:text-rightt">
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">Integrated Supplier</h3>
+                            <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
+                            <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
+                                Professional employees are there for you to pick the most amazing and fresh fruits.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- ===== -->
+                    <div class="flex flex-col justify-center lg:flex-row-reverse ">
+                        <div class="ml-0 lg:ml-3 flex justify-center lg:justify-end">
+                            <span
+                                class="w-10 h-10 rounded-full bg-neutral-300 text-gray-600 text-lg flex items-center justify-center mt-2">
+                                <i class="fa-regular fa-address-book"></i>
+                            </span>
+                        </div>
+                        <div class="my-2 lg:my-0 text-center lg:text-rightt">
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">Sustainable Practice</h3>
+                            <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
+                            <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
+                                Professional employees are there for you to pick the most amazing and fresh fruits.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- ===== -->
+                    <div class="flex flex-col justify-center lg:flex-row-reverse ">
+                        <div class="ml-0 lg:ml-3 flex justify-center lg:justify-end">
+                            <span
+                                class="w-10 h-10 rounded-full bg-neutral-300 text-gray-600 text-lg flex items-center justify-center mt-2">
+                                <i class="fa-regular fa-address-book"></i>
+                            </span>
+                        </div>
+                        <div class="my-2 lg:my-0 text-center lg:text-rightt">
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">The Benefits Only</h3>
+                            <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
+                            <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
+                                Professional employees are there for you to pick the most amazing and fresh fruits.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- ====== -->
+                </div>
+            </div>
+        </section>
 
     </main>
 
