--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                                 <i class="fa-regular fa-address-book"></i>
                             </span>
                         </div>
-                        <div class="space-y-2 text-center lg:text-left">
+                        <div class="text-center lg:text-left">
                             <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Dedicated Team</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
@@ -674,7 +674,7 @@
                                 <i class="fa-regular fa-address-book"></i>
                             </span>
                         </div>
-                        <div class="space-y-2 text-center lg:text-left">
+                        <div class="text-center lg:text-left">
                             <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Fresh is Best</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
@@ -690,7 +690,7 @@
                                 <i class="fa-regular fa-address-book"></i>
                             </span>
                         </div>
-                        <div class="space-y-2 text-center lg:text-left">
+                        <div class=" text-center lg:text-left">
                             <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Gift Certificates</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
@@ -705,7 +705,7 @@
                     <img src="./images/whychoose1.png" class="w-full">
                 </div>
                 <!-- third-child -->
-                <div class="flex-1 space-y-5 order-3">
+                <div class="flex-1 space-y-6 order-3">
                     <!-- ===== -->
                     <div class="flex flex-col justify-center lg:flex-row-reverse ">
                         <div class="ml-0 lg:ml-3 flex justify-center lg:justify-end">
@@ -714,7 +714,7 @@
                                 <i class="fa-regular fa-address-book"></i>
                             </span>
                         </div>
-                        <div class="my-2 lg:my-0 text-center lg:text-rightt">
+                        <div class="my-2 lg:my-0 text-center lg:text-right">
                             <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">Integrated Supplier</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
@@ -730,7 +730,7 @@
                                 <i class="fa-regular fa-address-book"></i>
                             </span>
                         </div>
-                        <div class="my-2 lg:my-0 text-center lg:text-rightt">
+                        <div class="my-2 lg:my-0 text-center lg:text-right">
                             <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">Sustainable Practice</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
@@ -746,7 +746,7 @@
                                 <i class="fa-regular fa-address-book"></i>
                             </span>
                         </div>
-                        <div class="my-2 lg:my-0 text-center lg:text-rightt">
+                        <div class="my-2 lg:my-0 text-center lg:text-right">
                             <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">The Benefits Only</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
@@ -763,7 +763,7 @@
 
     <!-- footer section -->
     <footer>
-
+        
     </footer>
 
 </body>
