--- a/index.html
+++ b/index.html
@@ -659,7 +659,8 @@
                             </span>
                         </div>
                         <div class="text-center lg:text-left">
-                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Dedicated Team</h3>
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Dedicated
+                                Team</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
                                 Professional employees are there for you to pick the most amazing and fresh fruits.
@@ -675,7 +676,8 @@
                             </span>
                         </div>
                         <div class="text-center lg:text-left">
-                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Fresh is Best</h3>
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Fresh is
+                                Best</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
                                 Professional employees are there for you to pick the most amazing and fresh fruits.
@@ -691,14 +693,15 @@
                             </span>
                         </div>
                         <div class=" text-center lg:text-left">
-                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Gift Certificates</h3>
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-left">Gift
+                                Certificates</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-left">
                                 Professional employees are there for you to pick the most amazing and fresh fruits.
                             </p>
                         </div>
                     </div>
-                    
+
                 </div>
                 <!-- second-child -->
                 <div class="flex-1 order-1 lg:order-2 ">
@@ -715,7 +718,8 @@
                             </span>
                         </div>
                         <div class="my-2 lg:my-0 text-center lg:text-right">
-                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">Integrated Supplier</h3>
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">
+                                Integrated Supplier</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
                                 Professional employees are there for you to pick the most amazing and fresh fruits.
@@ -731,7 +735,8 @@
                             </span>
                         </div>
                         <div class="my-2 lg:my-0 text-center lg:text-right">
-                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">Sustainable Practice</h3>
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">
+                                Sustainable Practice</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
                                 Professional employees are there for you to pick the most amazing and fresh fruits.
@@ -747,7 +752,8 @@
                             </span>
                         </div>
                         <div class="my-2 lg:my-0 text-center lg:text-right">
-                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">The Benefits Only</h3>
+                            <h3 class="text-black text-2xl lg:text-xl font-extrabold text-center lg:text-right">The
+                                Benefits Only</h3>
                             <p class="w-1/3 border-b-2 border-gray-500 inline-block"></p>
                             <p class="text-sm text-gray-400 leading-5 text-center lg:text-right">
                                 Professional employees are there for you to pick the most amazing and fresh fruits.
@@ -762,8 +768,31 @@
     </main>
 
     <!-- footer section -->
-    <footer>
-        
+    <footer class="bg-gray-950 py-8 text-white">
+        <div class="container mx-auto">
+            <div class="text-center space-y-10">
+                <div class="flex items-center justify-center">
+                    <img src="./images/logo.png" alt="logo" class="">
+                    <h3 class="text-5xl text-white font-bold ml-4">Fruit Burst</h3>
+                </div>
+                <div class="flex-wrap">
+                    <a href="#" class="px-5 text-sm">Home</a>
+                    <a href="#" class="px-5 text-sm">About Us</a>
+                    <a href="#" class="px-5 text-sm">Shop</a>
+                    <a href="#" class="px-5 text-sm">All Fruits</a>
+                    <a href="#" class="px-5 text-sm">Support</a>
+                    <a href="#" class="px-5 text-sm">My Account</a>
+                </div>
+                <div>
+                    <span><i class="fa-brands fa-twitter px-4 text-2xl"></i></span>
+                    <span><i class="fa-brands fa-facebook px-4 text-2xl text-blue-500"></i></span>
+                    <span><i class="fa-brands fa-youtube px-4 text-2xl text-red-500"></i></span>
+                    <span><i class="fa-brands fa-linkedin-in px-4 text-2xl"></i></span>
+                    <span><i class="fa-brands fa-instagram px-4 text-2xl"></i></span>
+                    <span><i class="fa-brands fa-apple px-4 text-2xl"></i></span>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
